# better-result-py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  jakefile.toml  pyproject.toml
src/better_result/: __init__.py  result.py
tests/: conftest.py  test_bench_err.py  test_bench_ok.py  test_malloc.py  test_ok_err.py
