[build-system]
requires = ["uv_build>=0.10.8,<0.11"]
build-backend = "uv_build"

[project]
name = "better-result-py"
version = "1.0.0"
description = "Yet another implementation of Rust's Result type: minimal, dependency-free and fully-typed."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.uv.build-backend]
module-name = "better_result"

[tool.pytest.ini_options]
addopts = [
  "-s",
]
